try fixing ipad bg img too big..

--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -7,8 +7,10 @@
   perspective: 1px;
   perspective-origin: 0 0;
   position: absolute;
-  width: 100vw;
-  height: 100vh;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background: $color-darker;
 }
 
